 * Fixed import to only ask about userid if we are actually importing.

2006-12-13 tmb
 * added funders, projects and divisions fields
 * added default organisation structure hierarchy for divisions field
 * added lookup script which attempts to detect and prevent duplicate deposits
    by looking at the title being entered

2006-12-13 cjg
 * Fixed bug that workflow next/prev didn't look at current data, but pre-
    update from form data.

2006-12-13 tmb
 * Prettier import screen
 * Import screen complains if no file/data given
 * Test run and Test run + Import actions for import screen

2006-12-13 cjg
 * Fixed OldXML export.

2006-12-13 tmb
 * Added redirect_to_me_url subs to fix Public::RequestCopy and 
    Request::Respond screens 
 * Removed "click here" from request copy email

2006-12-13 tmb
 * Added eprintid param to title dup lookup so that the current record isn't 
    suggested as a duplicate
 * Wrapping for warning/error messages in Import screen

2006-12-13 tmb
 * Don't try and suggest duplicate titles unless at least 5 chars have been typed

2006-12-13 cjg
 * erase_eprints now offers to rebuild static pages.
 * added google scholar headers
 * moved LINKS in eprint_render to being done by plugins - cleaner 
    eprint_render.pl
 * Added \n after header links to make produced page less annoying.
 
2006-12-13 cjg
 * Tiny change to render_citation so that we can pass through a target param.
 * Used this to stop entire citation being a link in title_lookup

2006-12-14 cjg
 * Fixed rendering problem with itemref fields.

2006-12-14 cjg
 * Moved google-friendly headers into a plugin called "simple" and 
    made it available as an export option.

2006-12-14 cjg
 * Minor change to lookup scripts to make them work in mysql 4.

2006-12-14 cjg
 * Registration errors now use proper error message style.

2006-12-14 cjg
 * Document upload no longer required by default (but a warning is still
    given).

2006-12-14 cjg
 * Removed unused secure template.